@@ -636,11 +636,11 @@ struct mbedtls_ssl_config
 #if defined(MBEDTLS_X509_CRT_PARSE_C)
     /** Callback to receive notification before X.509 chain building        */
     mbedtls_ssl_pre_verify_t *f_pre_vrfy;
-    void *p_pre_vrfy;               /*!< context for pre-verify calllback   */
+    void *p_pre_vrfy;               /*!< context for pre-verify callback    */
 
     /** Callback to customize X.509 certificate chain verification          */
     int (*f_vrfy)(void *, mbedtls_x509_crt *, int, uint32_t *);
-    void *p_vrfy;                   /*!< context for X.509 verify calllback */
+    void *p_vrfy;                   /*!< context for X.509 verify callback  */
 #endif
 
 #if defined(MBEDTLS_KEY_EXCHANGE__SOME__PSK_ENABLED)
@@ -1104,7 +1104,7 @@ void mbedtls_ssl_conf_verify( mbedtls_ssl_config *conf,
  */
 void mbedtls_ssl_conf_pre_verify( mbedtls_ssl_config *conf,
                          mbedtls_ssl_pre_verify_t *f_pre_vrfy,
-                         void *p_pre_vrfy);
+                         void *p_pre_vrfy );
 #endif /* MBEDTLS_X509_CRT_PARSE_C */
 
 /**
