@@ -10,7 +10,9 @@ Changes
    * Remove some redundant code in bignum.c. Contributed by Alexey Skalozub.
    * Support cmake build where Mbed TLS is a subproject. Fix
      contributed independently by Matthieu Volat and Arne Schwabe.
-
+   * Add a pre-verify callback to ssl.h to receive notification before
+     the X.509 chain building. Contributed by Nick Wilson.
+     
 = mbed TLS 2.8.0 branch released 2018-03-16
 
 Default behavior changes
